Java Data Area And OutOfMemoryError