@@ -1,5 +1,77 @@
 # Java内存区域与内存溢出异常 #
 
+[1.概述](#概述)
+
+[2.运行时数据区域](#运行时数据区域)
+
+[2.1.程序计数器](#程序计数器)
+
+[2.2.Java虚拟机栈](#java虚拟机栈)
+
+[2.3.本地方法栈](#本地方法栈)
+
+[2.4.Java堆](#java堆)
+
+[2.5.方法区](#方法区)
+
+[2.6.运行时常量池](#运行时常量池)
+
+[2.7.直接内存](#直接内存)
+
+[3.HotSpot虚拟机对象探秘](#hotspot虚拟机对象探秘)
+
+[3.1.对象的创建](#对象的创建)
+
+[3.1.1.一](#一)
+
+[3.1.2.二](#二)
+
+[3.1.3.三](#三)
+
+[3.1.4.四](#四)
+
+[3.1.5.最后](#最后)
+
+[3.2.对象的内存布局](#对象的内存布局)
+
+[3.2.1.对象头Header](#对象头header)
+
+[3.2.1.1.一](#一)
+
+[3.2.1.2.二](#二)
+
+[3.2.2.实例数据Instance](#实例数据instance)
+
+[3.2.3.对齐填充Padding](#对齐填充padding)
+
+[3.3.对象的访问定位](#对象的访问定位)
+
+[3.3.1.句柄](#句柄)
+
+[3.3.2.直接指针](#直接指针)
+
+[3.3.3.小结](#小结)
+
+[4.实战：OutOfMerroyError](#实战：outofmerroyerror)
+
+[4.1.Java堆溢出](#java堆溢出)
+
+[4.1.1.解决之道](#解决之道)
+
+[4.2.虚拟机栈和本地方法栈溢出](#虚拟机栈和本地方法栈溢出)
+
+[4.2.1.解决之道](#解决之道)
+
+[4.3.方法区和运行时常量池溢出](#方法区和运行时常量池溢出)
+
+[4.3.1.运行时常量池](#运行时常量池)
+
+[4.3.2.方法区](#方法区)
+
+[4.3.3.小结](#小结)
+
+[4.4.本机直接内存溢出](#本机直接内存溢出)
+
 ## 概述 ##
 
 **内存泄露 Memory Leak**
@@ -45,7 +117,7 @@
 
 这内存区域是**唯一一个**在JVM规范没有规定任何**OutOfMemoryError OOME**情况的区域
 
-## Java虚拟机栈 ##
+### Java虚拟机栈 ###
 
 **VM Stack**，线程私有，声明周期与线程相同。
 
@@ -343,4 +415,194 @@ Java堆对象的布局中就必须考虑如何放置访问类型数据的相关�
 HotSpot使用**直接指针**进行对象访问的，但从整个软件开发的范围来看，各种语言和框架使用句柄来访问的情况也十分常见。
 
 ## 实战：OutOfMerroyError ##
+
+1. 通过代码验证JVM规范中描述的各个运行时区域存储内容。
+2. 希望读者在工作中遇到实际的内存溢出异常，知道什么样的代码可能会导致这区域内存溢出，以及出现这异常该如何处理。
+
+例如，VM启动参数
+
+	-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
+
+>verbose /vɝ'bos/ adj. 冗长的；啰嗦的
+
+### Java堆溢出 ###
+
+Java堆用于存储对象实例，只要不断创建对象，并且保证GC Roots到对象之间有达途径来避免垃圾回收机制清除这些对象，那么再对象数量到达最大堆的容量限制后就会产生内存溢出异常
+
+将堆的最小值-Xms和最大值-Xmx参数设置一致可避免堆自动扩展
+
+-XX:+HeapDumpOnOutOfMemoryError让VM在出现内存溢出时Dump出当前的内存堆转储快照以便事后进行分析
+
+[HeapOOM](HeapOOM.java)
+
+运行结果：
+
+	...
+	java.lang.OutOfMemoryError: Java heap space
+	Dumping heap to java_pid5784.hprof ...
+	Heap dump file created [28135555 bytes in 0.213 secs]
+	Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
+		at java.util.Arrays.copyOf(Arrays.java:3210)
+		at java.util.Arrays.copyOf(Arrays.java:3181)
+	...
+
+Java堆内存的**java.lang.OutOfMemoryError**是实际应用中常见的**内存溢出异常**情况。
+
+#### 解决之道 ####
+
+先通过内存影响分析工具（如**Eclipse Memory Analyzer**）对Dump出来的堆转储快照进行分析，**重点是确认内存中的对象是否是必要的，也就是要先分清楚到底是出现了内存泄露Memory Leak还是内存溢出Memory Overflow**（从字面上理解吧！）
+
+>Eclipse Memory Analyzer使用方法
+>1. 使用Help->Eclipse Marketplace安装
+>2. Open Perspective中选择Memory Analysis
+>3. Open Heap Dump 打开上例程序运行所产生的堆转储快照文件java_pid5784.hprof（在classpath目录下）
+
+![](image/snapshot.png)
+
+>注意！java_pid5784.hprof文件被打开后，系统产生一堆文件
+
+![](image/midfiles.png)
+
+- 若**内存泄露**，可一步通过工具查看泄露对象到GC Roots的引用链。于是就能找到泄露对象是同过怎样的路径与GC Roots相关联并导致GC无法自动回收它们的。掌握了泄露对象的类型信息及GC Roots引用链的信息，即可比较准确地定位出泄露代码的位置。
+- 若**不存在泄露**，换句话说，就是内存中的对象确实都还必须存活着，那就应当检查VM的堆参数最小值-Xms和最大值-Xmx参数，与机器物理内存对比看是否还可以调大，从代码检查是否存在某些对象生命周期过长、持有状态时间过长的情况，尝试减少程序运行期的内存消耗。
+
+### 虚拟机栈和本地方法栈溢出 ###
+
+Hotspot VM并不区分 VM Stack和 Native Method Stack，因此，-Xoss参数（设置本地方法栈大小）形同虚设，栈容量只由-Xss参数设定。
+
+关于VM Stack和 Native Method Stack，在JVM规范中描述了两种异常：
+
+1. 若线程请求的栈深度大于VM所允许的最大深度，将抛出**StackOverflowError**异常。
+2. 若VM在扩展栈时无法申请到足够的内存空间，则抛出**OutOfMemoryError**异常
+
+这两异常有相互重叠地方：当栈空间无法继续分配时，到底是内存太小，还是栈空间太大，其本质上只是对同一件事情的两种描述。
+
+---
+
+在单线程环境操作
+
+[JavaVMStackSOF](JavaVMStackSOF.java)
+
+1. 使用 -Xss参数减少栈内存存量。会抛出java.lang.StackOverflowError，异常出现时输出的堆栈深度相应缩小。
+2. 定义大量的本地变量，增大此方法帧中本地变量表的长度。会抛出java.lang.StackOverflowError，异常出现时输出的堆栈深度相应缩小。
+
+上例程序针对第1点
+
+运行结果：
+
+	stack length:999
+	Exception in thread "main" java.lang.StackOverflowError
+		at com.lun.other.jvm.c02.JavaVMStackSOF.stackLeak(JavaVMStackSOF.java:12)
+		at com.lun.other.jvm.c02.JavaVMStackSOF.stackLeak(JavaVMStackSOF.java:13)
+		at com.lun.other.jvm.c02.JavaVMStackSOF.stackLeak(JavaVMStackSOF.java:13)
+	...
+
+实验结果表明：单线程环境下，无论栈帧太大还是VM栈容量太小，当内存无法分配时，VM都抛出StackOverflowError异常等。
+
+---
+
+[JavaVMStackOOM](JavaVMStackOOM.java)
+
+	把-Xss从108k设置到1024M 5min内 依然跑不出书上那样结果
+	
+	加上-Xmx20M -Xms20M 也是一样跑不出
+
+上例通过不断创建线程方式产生**内存溢出异常**。但是这样产生的**内存溢出异常**与栈空间是否足够大并存在任何联系，或者准确地说，在这种情况下，为每个线程的栈分配的内存越大，反而越容易产生**内存溢出异常**。（为什么我跑不出这样的实验结果呢？）
+
+---
+
+归根到底，OS分配每个进程内存是有限制的，譬如32位的Windows限制为2GB。VM提供了参数来参加Java堆 和 方法区的这两部分内存的最大值。剩余内存为2GB（OS限制）减去Xmx（最大堆容量），再减去MaxPermSize（最大方法区容量），PCR内存消耗很小，可忽略。
+
+若VM进程本身消耗的内存不计算在内，剩下的内存就由VM Stack 和 Native Method Stack“瓜分”了。
+
+每个线程分配到的栈容量越大，可建立的线程数量自然就越少，建立线程时就越容易把剩下内存耗尽。
+
+#### 解决之道 ####
+
+在开发多线程时要注意，出现StackOverflowError会有**错误堆栈信息**可阅读，相对来说，比较容易找打问题的所在。而且，若使用虚拟机默认参数，栈深度通常达到1000~2000完全没问题，对于正常的方法调用（包括递归），这深度应该完全够用了。
+
+但是，若建立过多线程导致的内存溢出，在不能减少线程数或者更换64位VM情况下，就只能通过**减少最大堆**和**减少栈容量**来换取更多线程。
+
+这种通过“**减少内存**”的手段来解决内存溢出的方式会比较难以想到。（似非而是）
+
+### 方法区和运行时常量池溢出 ###
+
+#### 运行时常量池 ####
+
+JDK1.7开始逐步“去永久代”。
+
+String.intern()是一个Native方法，其作用：若**字符串常量池**中已经包含一个等于此String对象的字符串，则返回代表池中这个字符串的String对象；否则，将此String对象包含的字符串添加到常量池中，并且返回此String对象的引用。
+
+**JDK1.6及以前的版本中**由于**常量池**分配在**永久代**内，可通过-XX:PermSize和-XX:MaxPermSize限制方法区大小，从而间接限制其中常量池的容量（-XX:PermSize 和 -XX:MaxPermSize 已被JDK1.8移除，取而代之的是-XX:MetaspaceSize和-XX:MaxMetaspaceSize）
+
+[RuntimeConstantPoolOOM](RuntimeConstantPoolOOM.java)
+
+运行时常量属于方法区（HotSpot虚拟机中永久代）的一部分。
+
+使用JDK1.7运行这段程序就不会得到相同的结果，while循环将一直进行下去
+
+JDK 1.8 JVM内部结构的元空间(Metaspace)取代永久代(PermGen)
+
+---
+
+[RuntimeConstantPoolOOM2](RuntimeConstantPoolOOM2.java)
+
+运行结果
+
+JDK1.6 -> 两个false
+JDK1.7 -> 前true后false
+
+在JDK1.6，intern()会把首先遇到的字符串实例复制到**永久代**中，返回的也是永久代中这个字符串实例的引用，而由StringBuilder创建的字符串实例在**Java堆**上，所以必然不是同一个引用，将返回false。
+
+在JDK1.7的intern()实现不会再复制实例，只是在常量池中**记录首次**出现的实例引用，因此intern()返回的引用和由StringBuilder创建的那个字符串实例是同一个。
+
+对str2比较返回false是因为“java”这个字符串在执行StringBuilder.toString()之前已经出现过，**字符串常量池**中已经有它的引用，不符合“**首次出现**”的原则，而“计算机软件”这个字符串是首次出现，因此返回true
+
+#### 方法区 ####
+
+方法区用于存放Class的相关信息，如
+
+1. 类名
+2. 访问修饰符
+3. 常量池
+4. 字段描述
+5. 方法描述
+6. 。。。
+
+对于这区域测试，基本思路是运行时产生大量的类填满方法区，直到溢出。
+
+为简单起见，不使用反射而借助CGLib直接操作字节码运行时生成了大量的动态类。
+
+[JavaMethodAreaOOM](JavaMethodAreaOOM.java)
+
+当前的很多主流框架，如Spring、Hibernate，在对此进行增强时，都会使用CGLib这类字节码技术，增强的类越多，就需越大的方法区来保证动态生成的Class可以加载入内存。
+
+另外，JVM动态语言（如Groovy等）通常都会持续创建类来实现语言的动态性。
+
+一个类要被GC回收掉，判定条件是比较苛刻的。在经常动态生成大量Class的应用中，需要特别注意类的回收状况。
+
+这类场景除了上面提到的程序使用了CGLib字节码增强和动态语言之外，常见还有
+
+1. 大量JSP或动态产生的引用（JSP第一次运行时需要编译为Java类）
+2. 基于OSGi的应用（即使是同一个类文件,被不同的加载器加载也会视为不同的类）
+
+#### 小结 ####
+
+-XX:PermSize 和 -XX:MaxPermSize 已被JDK1.8移除，查阅资料得知，JDK 1.8 JVM内部结构的元空间(Metaspace)取代永久代(PermGen)，所以在JDK1.8 机器上跑不出书本上那样结果。
+
+若把参数换成-XX:MetaspaceSize和-XX:MaxMetaspaceSize则有类似的结果。
+
+
+### 本机直接内存溢出 ###
+
+DirectMemory容量可通过-XX:MaxDirectMemorySize指定，若不指定，则默认与Java堆最大值（-Xmx指定）一样。
+
+直接通过Unsafe实例进行内存分配（Unsafe类的getUnsafe()方法限制了只有引导类加载器才会返回实例，也就是设计者希望只有rt.jar中的类才能使用Unsafe的功能）。
+
+DirectByteBuffer分配内存也会抛出内存溢出异常，但它抛出异常时并没有真正想OS申请分配内存，而是通过计算得知内存无法分配，于是直接抛出异常，真正申请分配内存的方法是unsafe.allocateMemory()
+
+[DirectMemoryOOM](DirectMemoryOOM.java)
+
+由DirectMemory导致的内存溢出，一个明显的特征是在Heap Dump文件中不会看见明显的异常，若发现OOME之后Dump文件很小，而程序中又直接或间接使用了NIO，那就可以考虑检查一下是不是这方面的原因。
+
 
